 v0.3.4
==================
add console script list_myrigs
add the page param to riglist api call
moved internal things so help and docstrings show

 v0.3.3
==================
add getbalance call
add myrentals call
add rental_detail call
add list_profiles call
add rent_rig call

 v0.3.2
==================
no code changes to mrrapi.py
formatting and pypi fixes

 v0.3
==================
Add myrigs to api calls
Add list my rigs example